<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">VOIDSTREAM</string>
    <string name="app_name_release" translatable="false" tools:ignore="UnusedResources">VOIDSTREAM</string>
    <string name="app_name_debug" translatable="false" tools:ignore="UnusedResources">VOIDSTREAM Debug</string>
    <string name="loading">Loading…</string>
    <string name="lbl_loading_elipses">Loading…</string>
    <string name="btn_cancel">Cancel</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="btn_got_it">Got it</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_open">Open</string>
    <string name="lbl_Reset">Reset</string>
    <string name="not_set">Not set</string>
    <string name="lbl_empty">Empty</string>
    <string name="lbl_none">None</string>
    <string name="lbl_hidden">Hidden</string>
    <string name="lbl_bracket_unknown">Unknown</string>
    <string name="lbl_unknown_key">Unknown (%1s)</string>
    <string name="settings_title">Settings</string>
    <string name="lbl_settings">Settings</string>
    <string name="pref_customization">Customization</string>
    <string name="pref_customization_description">Theme, home, remapping</string>
    <string name="customization">Customization</string>
    <string name="pref_about_title">About</string>
    <string name="advanced_settings">Advanced</string>
    <string name="Advanced_Settings">Advanced Settings</string>
    <string name="pref_behavior">Behavior</string>
    <string name="pref_browsing">Browsing</string>
    <string name="pref_troubleshooting">Troubleshooting</string>
    <string name="lbl_home">Home Sections</string>
    <string name="home_prefs">Home</string>
    <string name="home_sections">Jellyfin Home Sections</string>
    <string name="home_custom_sections">Home Custom Sections</string>
    <string name="enhanced_tweaks">Home Screen Settings</string>
    <string name="home_content_description">Home screen content</string>
    <string name="use_classic_home_screen">Home Screen layout</string>
    <string name="use_classic_home_screen_summary">Switch between classic and modern home screen layout</string>
    <string name="pref_home_description">Configure shown sections</string>
    <string name="home_section_latest_media">Recently added media</string>
    <string name="home_section_library">My media</string>
    <string name="home_section_library_small">My media (small)</string>
    <string name="home_section_resume">Continue watching</string>
    <string name="home_section_resume_audio">Continue listening</string>
    <string name="home_section_resume_book">Continue reading</string>
    <string name="home_section_active_recordings">Active recordings</string>
    <string name="home_section_next_up">Next up</string>
    <string name="home_section_continue_watching_combined">Continue watching combined</string>
    <string name="home_section_continue_nextup">Continue watching</string>
    <string name="home_section_livetv">Live TV</string>
    <string name="home_section_none">None</string>
    <string name="home_section_i">Home section %1$d</string>
    <string name="lbl_continue_watching">Continue watching</string>
    <string name="continue_listening">Continue listening</string>
    <string name="lbl_next_up">Next up</string>
    <string name="lbl_on_now">On now</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_suggested_tv_shows">Suggested TV Shows</string>
    <string name="genre_row_favorites">Favorites</string>
    <string name="show_favorites_row">Show Favorites row</string>
    <string name="show_my_collections_row">Collections row</string>
    <string name="show_collections_row">Collections</string>
    <string name="show_suggested_movies_row">Because you watched</string>
    <string name="show_discover_movies_row">Discover Movies</string>
    <string name="show_discover_series_row">Discover Series</string>
    <string name="show_recently_released_row">Recently Released</string>
    <string name="show_watch_it_again_row">Watch It Again</string>
    <string name="show_music_videos_row">Music Videos</string>
    <string name="show_live_tv_button">Live TV Button</string>
    <string name="show_live_tv_button_summary">Display the Live TV button </string>
    <string name="show_random_button">Random Movie Button</string>
    <string name="show_random_button_summary">Display the Random Movie button </string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_filtered_by_genre">Filtered by genre: %1$s</string>
    <string name="genre_row_i">Genre Row %1$d</string>
    <string name="genre_item_limit">Item Limit</string>
    <string name="genre_row_prefs">Configure custom sections</string>
    <string name="lbl_genre_row_loading">Loading genres…</string>
    <string name="genre_row_movie">Movie Genres</string>
    <string name="genre_row_tvshow">TV Show Genres</string>
    <string name="lbl_all_genres">All Genres</string>
    <string-array name="genres">
        <item>@string/genre_action</item>
        <item>@string/genre_adventure</item>
        <item>@string/genre_animation</item>
        <item>@string/genre_comedy</item>
        <item>@string/genre_crime</item>
        <item>@string/genre_documentary</item>
        <item>@string/genre_drama</item>
        <item>@string/genre_family</item>
        <item>@string/genre_fantasy</item>
        <item>@string/genre_history</item>
        <item>@string/genre_horror</item>
        <item>@string/genre_music</item>
        <item>@string/genre_mystery</item>
        <item>@string/genre_romance</item>
        <item>@string/genre_science_fiction</item>
        <item>@string/genre_thriller</item>
        <item>@string/genre_war</item>
        <item>@string/genre_western</item>
        <item>@string/genre_tv_movie</item>
    </string-array>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_search_hint">Search for movies, shows, and more...</string>
    <string name="lbl_search_try">Try searching for something else</string>
    <string name="lbl_voice_search">Voice Search</string>
    <string name="voice_search_not_available">Voice search not available</string>
    <string name="no_results_found">No results found</string>
    <string name="start_typing">Start typing to search</string>
    <string name="use_keyboard_or">Use keyboard or voice search</string>
    <string name="searchable_hint">Search VoidStream</string>
    <string name="searchable_settings_description">Media</string>
    <string name="lbl_library">Collection_Playlist</string>
    <string name="lbl_my_media">My Media</string>
    <string name="lbl_my_media_small">My Media (Small)</string>
    <string name="lbl_my_media_extra_small">Display My media folders as buttons</string>
    <string name="lbl_collections">Collections</string>
    <string name="lbl_my_collections">Collections</string>
    <string name="pref_libraries">Libraries</string>
    <string name="pref_libraries_description">Change how libraries are displayed</string>
    <string name="lbl_movies">Movies</string>
    <string name="lbl_tv_series">TV series</string>
    <string name="lbl_series">Series</string>
    <string name="lbl_seasons">Seasons</string>
    <string name="lbl_episodes">Episodes</string>
    <string name="lbl_song">Song</string>
    <string name="lbl_songs">Songs</string>
    <string name="lbl_album">Album</string>
    <string name="lbl_albums">Albums</string>
    <string name="lbl_album_artists">Album artists</string>
    <string name="lbl_artists">Artists</string>
    <string name="lbl_playlists">Playlists</string>
    <string name="lbl_Playlists">Playlists</string>
    <string name="lbl_music_playlists">Music Playlists</string>
    <string name="lbl_playlists_and_albums">Playlists &amp; Albums</string>
    <string name="lbl_videos">Videos</string>
    <string name="lbl_music_videos">Music Videos</string>
    <string name="music_videos">Music Videos</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_items">Items</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_programs">Programs</string>
    <string name="channels">Channels</string>
    <string name="photo_albums">Photo albums</string>
    <string name="photos">Photos</string>
    <string name="lbl_views">Views</string>
    <string name="lbl_by_letter">By letter</string>
    <string name="byletter_letters" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="lbl_latest">Recently added</string>
    <string name="lbl_latest_in">Recently added in %s</string>
    <string name="lbl_by_name">By name</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_coming_up">Coming up</string>
    <string name="lbl_favorite_channels">Favorite channels</string>
    <string name="lbl_other_channels">Other channels</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="play_pause">Play/Pause</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="fast_forward">Fast forward</string>
    <string name="rewind">Rewind</string>
    <string name="audio">Audio</string>
    <string name="subtitles">Subtitles</string>
    <string name="lbl_enter_server_address">Enter server address</string>
    <string name="lbl_valid_server_address">Please enter the server address (IP or domain/machine name)</string>
    <string name="server_connecting">Connecting to %1$s</string>
    <string name="action_connect">Connect</string>
    <string name="server_unsupported_notification">This server uses Jellyfin version %1$s which is unsupported. Please update to Jellyfin %2$s or newer to continue using the app.</string>
    <string name="lbl_sign_in">Please sign in</string>
    <string name="action_login">Sign in</string>
    <string name="action_use_password">Use a password</string>
    <string name="action_use_quickconnect">Use Quick Connect</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="login_connect_to">Connecting to %1$s</string>
    <string name="login_other_options">Other options:</string>
    <string name="login_quickconnect_step_1">1.Open the Jellyfin app on your phone or webbrowser</string>
    <string name="login_quickconnect_step_2">2.Open the user menu and go to the Quick Connect page</string>
    <string name="login_quickconnect_step_3">3.Enter the following code:</string>
    <string name="who_is_watching">Who\'s watching?</string>
    <string name="add_user">Add account</string>
    <string name="no_user_warning">We couldn\'t find any accounts!\nAdd a new account by pressing the \"Add account\" button.</string>
</resources>